Cambio redondeo caja, whatsapp en curso retirado

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,7 +18,7 @@ import { menu } from "@lib/menu.ts";
               <li>
                 <a
                   href={item.href}
-                  class="btn btn-ghost uppercase hover:bg-sky-600 hover:text-white transition-colors"
+                  class="btn btn-ghost rounded-md uppercase hover:bg-sky-600 hover:text-white transition-colors"
                 >
                   {item.name}
                 </a>
@@ -28,7 +28,7 @@ import { menu } from "@lib/menu.ts";
         </ul>
         <a
           href="https://aulavirtualcenakin.com"
-          class="border-none btn btn-primary uppercase bg-sky-600 text-white hover:bg-sky-800 hover:text-white transition-colors"
+          class="border-none btn btn-primary rounded-md uppercase bg-sky-600 text-white hover:bg-sky-800 hover:text-white transition-colors"
           >Aula Virtual</a
         >
       </div>
