--- a/src/components/HeaderCurso.astro
+++ b/src/components/HeaderCurso.astro
@@ -12,7 +12,7 @@ import { menu } from "@lib/menu.ts";
         </a>
         <button
           onclick="history.back()"
-          class="btn btn-ghost lg:hidden bg-slate-200"
+          class="btn btn-ghost rounded-md lg:hidden bg-slate-200"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -38,7 +38,7 @@ import { menu } from "@lib/menu.ts";
               <li>
                 <a
                   href={item.href}
-                  class="btn btn-ghost uppercase hover:bg-sky-600 hover:text-white transition-colors"
+                  class="btn btn-ghost rounded-md uppercase hover:bg-sky-600 hover:text-white transition-colors"
                 >
                   {item.name}
                 </a>
@@ -48,7 +48,7 @@ import { menu } from "@lib/menu.ts";
         </ul>
         <a
           href="https://aulavirtualcenakin.com"
-          class="border-none btn btn-primary uppercase bg-sky-600 text-white hover:bg-sky-800 hover:text-white transition-colors"
+          class="border-none btn btn-primary rounded-md uppercase bg-sky-600 text-white hover:bg-sky-800 hover:text-white transition-colors"
           >Aula Virtual</a
         >
       </div>
