--- a/src/components/cursos/Introduccion.astro
+++ b/src/components/cursos/Introduccion.astro
@@ -2,6 +2,6 @@
 const { texto } = Astro.props;
 ---
 
-<div class="card bg-base-100 shadow-sm">
+<div class="card rounded-md bg-base-100 shadow-sm">
   <div class="card-body prose max-w-full" set:html={texto} />
 </div>
