--- a/src/components/cursos/ReservaPrecio.astro
+++ b/src/components/cursos/ReservaPrecio.astro
@@ -61,7 +61,7 @@ const fechaFormateada = (fecha) => {
       <div class="hidden md:flex">
         <button
           id="compra2"
-          class="btn bg-sky-600 text-white py-6 uppercase w-full"
+          class="btn rounded-md rounded-md bg-sky-600 text-white py-6 uppercase w-full"
           aria-data-id={id}
         >
           Inscríbete aquí
