--- a/src/components/cursos/Video.astro
+++ b/src/components/cursos/Video.astro
@@ -7,4 +7,4 @@
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
   referrerpolicy="strict-origin-when-cross-origin"
   allowfullscreen
-  class="mt-5"></iframe>
+  class="mt-5 rounded-md"></iframe>
