--- a/src/components/extras/Card.astro
+++ b/src/components/extras/Card.astro
@@ -11,7 +11,7 @@ const { slug, title } = Astro.props;
 
 <a href={`/cursos/${slug}`} class="col-span-1">
   <div
-    class="card bg-base-100 shadow-lg hover:shadow-xl transition-shadow duration-300 rounded-lg"
+    class="card rounded-md bg-base-100 shadow-lg hover:shadow-xl transition-shadow duration-300 rounded-md"
   >
     <figure class="relative">
       <div
