--- a/src/components/cursos/InObj.astro
+++ b/src/components/cursos/InObj.astro
@@ -9,7 +9,7 @@ const { incluye, objetivos } = Astro.props;
 <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
   {
     incluye && (
-      <div class="card bg-base-100 shadow-sm col-span-1">
+      <div class="card rounded-md bg-base-100 shadow-sm col-span-1">
         <div class="card-body prose">
           <h3 class="text-xl font-bold text-sky-600 ">Incluye</h3>
           <div set:html={incluye} />
@@ -19,7 +19,7 @@ const { incluye, objetivos } = Astro.props;
   }
   {
     objetivos && (
-      <div class="card bg-base-100 shadow-sm col-span-1">
+      <div class="card rounded-md bg-base-100 shadow-sm col-span-1">
         <div class="card-body prose">
           <h3 class="text-xl font-bold text-sky-600">Objetivos</h3>
           <div set:html={objetivos} />
