--- a/src/components/cursos/RePlan.astro
+++ b/src/components/cursos/RePlan.astro
@@ -5,7 +5,7 @@ const { requisitos, plan } = Astro.props;
 <div class="grid grid-cols-1 gap-4">
   {
     requisitos && (
-      <div class="card bg-base-100 shadow-sm">
+      <div class="card rounded-md bg-base-100 shadow-sm">
         <div class="card-body prose max-w-full">
           <h3 class="text-xl font-bold text-sky-600">Requisitos</h3>
           <div set:html={requisitos} />
@@ -15,7 +15,7 @@ const { requisitos, plan } = Astro.props;
   }
   {
     plan && (
-      <div class="card bg-base-100 shadow-sm">
+      <div class="card rounded-md bg-base-100 shadow-sm">
         <div class="card-body prose max-w-full">
           <h3 class="text-xl font-bold text-sky-600">Plan de Estudios</h3>
           <div set:html={plan} />
