--- a/src/components/cursos/Reserva.astro
+++ b/src/components/cursos/Reserva.astro
@@ -58,13 +58,13 @@ const fechaFormateada = (fecha) => {
             : `Arancel con descuento. Válido hasta el ${fechaFormateada(fecha)}`
         }
       </p>
-      <div class="stat-value text-sky-600 text-5xl text-center lg:p-6 py-6">
+      <div class="stat-value text-sky-600 text-4xl text-center lg:p-6 py-6">
         {descuento == 0 ? moneda(precio) : moneda(descuento)} CLP
       </div>
       <div class="hidden md:flex">
         <button
           id="compra1"
-          class="btn bg-sky-600 text-white w-full py-6 uppercase"
+          class="btn rounded-md bg-sky-600 text-white w-full py-6 uppercase rounded-md"
           aria-data-id={id}
         >
           Inscríbete aquí
