--- a/src/components/cursos/Whats.astro
+++ b/src/components/cursos/Whats.astro
@@ -1,5 +1,5 @@
 <a
-  class="btn bg-green-600 text-white border-green-600 btn-lg w-auto lg:w-96 p-10"
+  class="btn rounded-md bg-green-600 text-white border-green-600 btn-lg w-auto lg:w-96 p-10"
   href="https://wa.me/56944871048?text=Hola%20me%20gustaría%20contactarme"
   target="_blank"
 >
