--- a/src/components/extras/Contacto.astro
+++ b/src/components/extras/Contacto.astro
@@ -5,18 +5,20 @@ import DatosContacto from "@components/extras/DatosContacto.astro";
 
 <div id="contacto">
   <Container>
-    <div class="grid grid-cols-1 xl:grid-cols-3 gap-8 py-16">
-      <DatosContacto />
-      <div class="col-span-1 xl:col-span-2 pb-8 md:pb-0">
+    <div class="grid grid-cols-1 xl:grid-cols-6 gap-8 py-16">
+      <div class="col-span-1 lg:col-span-2 lg:col-start-2">
+        <DatosContacto />
+      </div>
+      <div class="col-span-1 lg:col-span-2 pb-8 md:pb-0">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3345.0373071833806!2d-71.54200622347714!3d-33.02914757606182!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9689ddc28f9fad87%3A0xc04b1826cc0704ae!2sCenakin!5e0!3m2!1ses-419!2scl!4v1754674109576!5m2!1ses-419!2scl"
           width="100%"
-          height="450px"
+          height="420px"
           style="border:0;"
           allowfullscreen=""
           loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"
-          class="rounded-lg shadow-xl"></iframe>
+          class="rounded-md shadow-xl"></iframe>
       </div>
     </div>
   </Container>
