--- a/src/components/extras/Faq.astro
+++ b/src/components/extras/Faq.astro
@@ -43,58 +43,84 @@ const dudas = [
   <Container>
     <div class="py-8">
       <h2 class="text-2xl font-bold mb-2">Preguntas Frecuentes</h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-16">
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-2">
         <div class="col-span-1">
-          <div class="collapse bg-base-100 border border-base-300">
-            <input type="radio" name="my-accordion-1" />
-            <div class="collapse-title font-semibold bg-sky-600 text-white">
+          <div
+            class="collapse collapse-arrow rounded-md bg-base-100 border border-base-300 mb-2"
+          >
+            <input type="checkbox" name="my-accordion" />
+            <div
+              class="collapse-title h-20 flex items-center justify-center font-semibold bg-sky-600 text-white"
+            >
               {dudas[0].pregunta}
             </div>
             <div class="collapse-content text-sm">
               <p class="pt-2">{dudas[0].respuesta}</p>
             </div>
           </div>
-          <div class="collapse bg-base-100 border border-base-300">
-            <input type="radio" name="my-accordion-1" />
-            <div class="collapse-title font-semibold bg-sky-600 text-white">
+          <div
+            class="collapse collapse-arrow rounded-md bg-base-100 border border-base-300"
+          >
+            <input type="checkbox" name="my-accordion" />
+            <div
+              class="collapse-title h-20 flex items-center justify-center font-semibold bg-sky-600 text-white"
+            >
               {dudas[1].pregunta}
             </div>
             <div class="collapse-content text-sm">
               <p class="pt-2">{dudas[1].respuesta}</p>
             </div>
           </div>
-          <div class="collapse bg-base-100 border border-base-300">
-            <input type="radio" name="my-accordion-1" />
-            <div class="collapse-title font-semibold bg-sky-600 text-white">
+        </div>
+        <div class="col-span-1">
+          <div
+            class="collapse collapse-arrow rounded-md bg-base-100 border border-base-300 mb-2"
+          >
+            <input type="checkbox" name="my-accordion" />
+            <div
+              class="collapse-title h-20 flex items-center justify-center font-semibold bg-sky-600 text-white"
+            >
               {dudas[2].pregunta}
             </div>
             <div class="collapse-content text-sm">
               <p class="pt-2">{dudas[2].respuesta}</p>
             </div>
           </div>
-        </div>
-        <div class="col-span-1">
-          <div class="collapse bg-base-100 border border-base-300">
-            <input type="radio" name="my-accordion-1" />
-            <div class="collapse-title font-semibold bg-sky-600 text-white">
+          <div
+            class="collapse collapse-arrow rounded-md bg-base-100 border border-base-300"
+          >
+            <input type="checkbox" name="my-accordion" />
+            <div
+              class="collapse-title h-20 flex items-center justify-center font-semibold bg-sky-600 text-white"
+            >
               {dudas[3].pregunta}
             </div>
             <div class="collapse-content text-sm">
               <p class="pt-2">{dudas[3].respuesta}</p>
             </div>
           </div>
-          <div class="collapse bg-base-100 border border-base-300">
-            <input type="radio" name="my-accordion-1" />
-            <div class="collapse-title font-semibold bg-sky-600 text-white">
+        </div>
+        <div class="col-span-1">
+          <div
+            class="collapse collapse-arrow rounded-md bg-base-100 border border-base-300 mb-2"
+          >
+            <input type="checkbox" name="my-accordion" />
+            <div
+              class="collapse-title h-20 flex items-center justify-center font-semibold bg-sky-600 text-white"
+            >
               {dudas[4].pregunta}
             </div>
             <div class="collapse-content text-sm">
               <p class="pt-2">{dudas[4].respuesta}</p>
             </div>
           </div>
-          <div class="collapse bg-base-100 border border-base-300">
-            <input type="radio" name="my-accordion-1" />
-            <div class="collapse-title font-semibold bg-sky-600 text-white">
+          <div
+            class="collapse collapse-arrow rounded-md bg-base-100 border border-base-300"
+          >
+            <input type="checkbox" name="my-accordion" />
+            <div
+              class="collapse-title h-20 flex items-center justify-center font-semibold bg-sky-600 text-white"
+            >
               {dudas[5].pregunta}
             </div>
             <div class="collapse-content text-sm">
