--- a/src/components/extras/Info.astro
+++ b/src/components/extras/Info.astro
@@ -8,7 +8,7 @@ import Container from "@layouts/Container.astro";
   >
     <div>
       <img
-        src="/images/banner3_ng.svg"
+        src="https://cenakin.cl/images/banner_bl.svg"
         alt="Logo Cenakin 3 años acreditado"
         class="md:w-96"
       />
