--- a/src/components/inicio/Formaciones.astro
+++ b/src/components/inicio/Formaciones.astro
@@ -38,8 +38,8 @@ const formaciones = [
 ---
 
 <Container>
-  <div id="formaciones">
-    <h2 class="text-2xl font-bold">Nuestras Formaciones</h2>
+  <div id="formaciones" class="mb-20">
+    <h2 class="text-5xl font-bold mb-4">Nuestras Formaciones</h2>
     <ul
       class="my-2 grid grid-cols-1 md:grid-cols-2 xl:grid-cols-4 gap-2 xl:gap-4"
     >
