--- a/src/layouts/Container.astro
+++ b/src/layouts/Container.astro
@@ -1,4 +1,5 @@
 ---
+import Inscripcion from "@components/extras/Inscripcion.astro";
 interface Props {
   className?: string;
 }
@@ -8,3 +9,5 @@ const { className = "" } = Astro.props;
 <div class={`@container container mx-auto px-4 overflow-hidden ${className}`}>
   <slot />
 </div>
+
+<Inscripcion />
