--- a/src/components/extras/Contacto.astro
+++ b/src/components/extras/Contacto.astro
@@ -3,13 +3,14 @@ import Container from "@layouts/Container.astro";
 import DatosContacto from "@components/extras/DatosContacto.astro";
 ---
 
-<div id="contacto">
+<div id="contacto" class="pt-24">
   <Container>
-    <div class="grid grid-cols-1 xl:grid-cols-6 gap-8 py-16">
-      <div class="col-span-1 lg:col-span-2 lg:col-start-2">
+    <h2 class="text-5xl font-bold mb-4">¡Manténgamonos en contacto!</h2>
+    <div class="grid grid-cols-1 xl:grid-cols-9 gap-8 pb-24">
+      <div class="col-span-1 xl:col-span-3 xl:col-start-2">
         <DatosContacto />
       </div>
-      <div class="col-span-1 lg:col-span-2 pb-8 md:pb-0">
+      <div class="col-span-1 xl:col-span-4">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3345.0373071833806!2d-71.54200622347714!3d-33.02914757606182!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9689ddc28f9fad87%3A0xc04b1826cc0704ae!2sCenakin!5e0!3m2!1ses-419!2scl!4v1754674109576!5m2!1ses-419!2scl"
           width="100%"
