--- a/src/components/extras/DatosContacto.astro
+++ b/src/components/extras/DatosContacto.astro
@@ -1,4 +1,7 @@
-<div class="card rounded-md bg-base-100 shadow-xl p-4 h-[420px]">
+<div
+  class="card rounded-md bg-base-100 shadow-lg p-4 h-[420px]"
+  id="datos-contacto"
+>
   <div class="card-body">
     <div class="grid grid-cols-12 gap-2">
       <div class="col-span-1">
