--- a/src/layouts/Container.astro
+++ b/src/layouts/Container.astro
@@ -6,7 +6,9 @@ interface Props {
 const { className = "" } = Astro.props;
 ---
 
-<div class={`@container container mx-auto px-4 overflow-hidden ${className}`}>
+<div
+  class={`@container container mx-auto px-4 overflow-hidden max-w-7xl ${className}`}
+>
   <slot />
 </div>
 
