--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,6 +40,15 @@ const { title, description, url, image, keywords } = Astro.props
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto:ital@0;1&display=swap"
       rel="stylesheet"
     />
+    <script src="/js/pixel.js"></script>
+    <noscript
+      ><img
+        height="1"
+        width="1"
+        style="display:none"
+        src="https://www.facebook.com/tr?id=1078650119240088&ev=PageView&noscript=1"
+      /></noscript
+    >
   </head>
   <body class="bg-white">
     <Header />
