--- a/src/pages/cursos/[slug].astro
+++ b/src/pages/cursos/[slug].astro
@@ -76,9 +76,9 @@ const seo: Seo = {
           />
         </div>
       </div>
-      <aside class="col-span-1 flex flex-col gap-4">
+      <aside class="col-span-1">
         <DatosContacto />
-        <div class="card bg-base-100 shadow-xl p-4 hidden lg:block relative">
+        <div id="stick">
           <ReservaPrecio
             precio={curso.regular_price}
             descuento={curso.sale_price}
@@ -90,6 +90,13 @@ const seo: Seo = {
     </div>
   </Container>
 </Layout>
+
+<style>
+  #stick {
+    position: sticky;
+    top: 20px;
+  }
+</style>
 
 <script>
   const btnComprar1 = document.getElementById("compra1");
