--- a/src/components/extras/Faq.astro
+++ b/src/components/extras/Faq.astro
@@ -49,7 +49,7 @@ const dudas = [
         >
           <input type="checkbox" name="my-accordion" />
           <div
-            class="collapse-title h-20 flex items-center justify-center font-semibold bg-sky-600 text-white"
+            class="collapse-title h-20 md:h-32 lg:h-20 flex items-center justify-center font-semibold bg-sky-600 text-white"
           >
             {dudas[0].pregunta}
           </div>
@@ -62,7 +62,7 @@ const dudas = [
         >
           <input type="checkbox" name="my-accordion" />
           <div
-            class="collapse-title h-20 flex items-center justify-center font-semibold bg-sky-600 text-white"
+            class="collapse-title h-20 md:h-32 lg:h-20 flex items-center justify-center font-semibold bg-sky-600 text-white"
           >
             {dudas[1].pregunta}
           </div>
@@ -77,7 +77,7 @@ const dudas = [
         >
           <input type="checkbox" name="my-accordion" />
           <div
-            class="collapse-title h-20 flex items-center justify-center font-semibold bg-sky-600 text-white"
+            class="collapse-title h-20 md:h-32 lg:h-20 flex items-center justify-center font-semibold bg-sky-600 text-white"
           >
             {dudas[2].pregunta}
           </div>
@@ -90,7 +90,7 @@ const dudas = [
         >
           <input type="checkbox" name="my-accordion" />
           <div
-            class="collapse-title h-20 flex items-center justify-center font-semibold bg-sky-600 text-white"
+            class="collapse-title h-20 md:h-32 lg:h-20 flex items-center justify-center font-semibold bg-sky-600 text-white"
           >
             {dudas[3].pregunta}
           </div>
@@ -105,7 +105,7 @@ const dudas = [
         >
           <input type="checkbox" name="my-accordion" />
           <div
-            class="collapse-title h-20 flex items-center justify-center font-semibold bg-sky-600 text-white"
+            class="collapse-title h-20 md:h-32 lg:h-20 flex items-center justify-center font-semibold bg-sky-600 text-white"
           >
             {dudas[4].pregunta}
           </div>
@@ -118,7 +118,7 @@ const dudas = [
         >
           <input type="checkbox" name="my-accordion" />
           <div
-            class="collapse-title h-20 flex items-center justify-center font-semibold bg-sky-600 text-white"
+            class="collapse-title h-20 md:h-32 lg:h-20 flex items-center justify-center font-semibold bg-sky-600 text-white"
           >
             {dudas[5].pregunta}
           </div>
