--- a/src/components/extras/Inscripcion.astro
+++ b/src/components/extras/Inscripcion.astro
@@ -25,14 +25,14 @@ import { cursos } from "@lib/cursos";
               type="text"
               id="name"
               placeholder="Ingresa tu nombre"
-              class="input col-span-1 rounded-md"
+              class="input col-span-1 rounded-md w-full"
               required
             />
             <input
               type="email"
               id="email"
               placeholder="Ingresa tu correo"
-              class="input col-span-1 rounded-md"
+              class="input col-span-1 rounded-md w-full"
               required
             />
             <!-- <select name="curso" id="curso" class="select">
@@ -48,7 +48,7 @@ import { cursos } from "@lib/cursos";
               placeholder="Ingrese su teléfono"
               name="telefono"
               id="telefono"
-              class="input col-span-1 rounded-md"
+              class="input col-span-1 rounded-md w-full"
               required
             />
             <button
