--- a/src/components/inicio/Cabecera.astro
+++ b/src/components/inicio/Cabecera.astro
@@ -4,18 +4,18 @@
       srcset="https://cenakin.cl/images/portada/1_1264.webp"
       media="(min-width: 1400px)"
       type="image/webp"
-      height="630px"
+      height="630"
     />
     <source
       srcset="https://cenakin.cl/images/portada/1_960.webp"
       media="(min-width: 768px)"
       type="image/webp"
-      height="630px"
+      height="630"
     />
     <img
       src="https://cenakin.cl/images/portada/1_600.webp"
       alt="Portada Cenakin"
-      height="430px"
+      height="430"
     />
   </picture>
 </div>
