--- a/src/layouts/LayoutCurso.astro
+++ b/src/layouts/LayoutCurso.astro
@@ -9,6 +9,7 @@ interface Props {
   description: string;
   url: string;
   image: string;
+  keywords: string;
 }
 
 const { title, description, url, image, keywords } = Astro.props
@@ -44,7 +45,7 @@ const { precio, id } = Astro.props as {
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto:ital@0;1&display=swap"
       rel="stylesheet"
     />
-    <script src="/js/pixel.js"></script>
+    <script src="/js/pixel.js" is:inline></script>
     <noscript
       ><img
         height="1"
