--- a/src/pages/cursos/[slug].astro
+++ b/src/pages/cursos/[slug].astro
@@ -76,7 +76,7 @@ const seo: Seo = {
           />
         </div>
       </div>
-      <aside class="col-span-1">
+      <aside class="col-span-1 sticky top-0">
         <DatosContacto />
         <div id="stick">
           <ReservaPrecio
