--- a/src/components/categorias/Header.astro
+++ b/src/components/categorias/Header.astro
@@ -2,7 +2,7 @@
 const { titulo, descripcion } = Astro.props;
 ---
 
-<div class="hero bg-sky-600 h-80 rounded-md my-4 rounded-md">
+<div class="hero bg-sky-600 h-60 rounded-md my-4">
   <div class="hero-content text-center">
     <div class="max-w-2xl">
       <h1 class="text-5xl font-bold text-white">{titulo}</h1>
