--- a/src/components/extras/Card.astro
+++ b/src/components/extras/Card.astro
@@ -9,42 +9,43 @@ interface Props {
 const { slug, title } = Astro.props;
 ---
 
-<a href={`/cursos/${slug}`} class="col-span-1">
-  <div
-    class="card rounded-md bg-base-100 shadow-lg hover:shadow-xl transition-shadow duration-300 rounded-md"
-  >
-    <figure class="relative">
-      <div
-        class="badge bg-sky-600 text-white absolute top-2 left-2 rounded-none border-none font-bold"
-      >
-        CENAKIN
-      </div>
+<li
+  class="rounded-md shadow-md hover:shadow-lg transition-shadow duration-300 col-span-1"
+>
+  <a href={`/cursos/${slug}`} class="list-row p-0 rounded-md">
+    <div>
       <img
-        src={`https://cenakin.cl/images/cursos/${slug}/1@1x.webp`}
+        class="h-full w-32 object-cover lg:h-32 rounded-bl-md rounded-tl-md"
+        src={`https://cenakin.cl/images/cursos/${slug}/mini.webp`}
         alt={title}
-        class="hover:scale-110 transition-transform duration-300"
       />
-    </figure>
-    <div class="card-body">
-      <h2 class="card-title">{title}</h2>
-      <div class="card-actions">
-        <ul>
-          <li class="flex items-center gap-2">
-            <FileBadge color="oklch(58% 0.158 241.966)" />Curso Certificado
-          </li>
-          <li class="flex items-center gap-2">
-            <ShieldCheck color="oklch(58% 0.158 241.966)" />Docentes
-            Profesionales
-          </li>
-        </ul>
+    </div>
+    <div class="py-1">
+      <div class="lg:text-xl leading-tight font-bold title line-clamp-2">
+        {title}
+      </div>
+      <div class="flex flex-col gap-1 mt-2">
+        <div class="flex items-center badge text-xs">
+          <FileBadge
+            color="oklch(58% 0.158 241.966)"
+            size="14"
+            class="mr-0"
+          />Curso Certificado
+        </div>
+        <div class="flex items-center badge text-xs">
+          <ShieldCheck
+            color="oklch(58% 0.158 241.966)"
+            size="14"
+            class="mr-0"
+          />Docentes Profesionales
+        </div>
       </div>
     </div>
-  </div>
-</a>
+  </a>
+</li>
 
 <style>
-  .badge {
+  .title {
     font-family: "Roboto", sans-serif;
-    text-shadow: 1px 1px 1px black;
   }
 </style>
