--- a/src/components/extras/DatosContacto.astro
+++ b/src/components/extras/DatosContacto.astro
@@ -1,7 +1,4 @@
-<div
-  class="card rounded-md bg-base-100 shadow-lg p-4 h-[420px]"
-  id="datos-contacto"
->
+<div class="card rounded-md bg-base-100 shadow-lg p-4" id="datos-contacto">
   <div class="card-body">
     <div class="grid grid-cols-12 gap-2">
       <div class="col-span-1">
@@ -161,3 +158,15 @@
     </div>
   </div>
 </div>
+
+<style>
+  #datos-contacto {
+    height: auto;
+  }
+
+  @media (width > 1400) {
+    #datos-contacto {
+      height: 448px;
+    }
+  }
+</style>
