--- a/src/pages/cursos/index.astro
+++ b/src/pages/cursos/index.astro
@@ -19,7 +19,13 @@ const seo: Seo = {
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 lg:mb-0">
       {
         masoterapia.map((curso: any) => {
-          return <Card slug={curso.slug} title={curso.name} />;
+          return (
+            <Card
+              slug={curso.slug}
+              title={curso.name}
+              horas={curso.acf.horas}
+            />
+          );
         })
       }
     </div>
