--- a/src/components/extras/Card.astro
+++ b/src/components/extras/Card.astro
@@ -1,43 +1,43 @@
 ---
-import { FileBadge, ShieldCheck } from "lucide-astro";
+import { FileBadge } from "lucide-astro";
 
 interface Props {
   slug: string;
   title: string;
+  horas?: string;
 }
 
-const { slug, title } = Astro.props;
+const { slug, title, horas } = Astro.props;
 ---
 
 <li
-  class="rounded-md shadow-md hover:shadow-lg transition-shadow duration-300 col-span-1"
+  class="rounded-md shadow-lg hover:shadow-lg transition-shadow duration-300 col-span-1"
 >
-  <a href={`/cursos/${slug}`} class="list-row p-0 rounded-md">
+  <a
+    href={`/cursos/${slug}`}
+    class="list-row p-0 rounded-md h-18 lg:h-32 bg-white"
+  >
     <div>
       <img
-        class="h-full w-32 object-cover lg:h-32 rounded-bl-md rounded-tl-md"
+        class="w-24 lg:w-40 object-cover h-18 lg:h-32 rounded-bl-md rounded-tl-md"
         src={`https://cenakin.cl/images/cursos/${slug}/mini.webp`}
         alt={title}
       />
     </div>
-    <div class="py-1">
-      <div class="lg:text-xl leading-tight font-bold title line-clamp-2">
+    <div class="py-2 pr-2 flex flex-col justify-between">
+      <div class="lg:text-2xl leading-tight font-bold title line-clamp-2">
         {title}
       </div>
       <div class="flex flex-col gap-1 mt-2">
-        <div class="flex items-center badge text-xs">
+        <div class="flex items-center text-xs h-4">
           <FileBadge
             color="oklch(58% 0.158 241.966)"
             size="14"
-            class="mr-0"
+            class="mr-1"
           />Curso Certificado
         </div>
-        <div class="flex items-center badge text-xs">
-          <ShieldCheck
-            color="oklch(58% 0.158 241.966)"
-            size="14"
-            class="mr-0"
-          />Docentes Profesionales
+        <div>
+          {horas}
         </div>
       </div>
     </div>
