--- a/src/components/categorias/Header.astro
+++ b/src/components/categorias/Header.astro
@@ -1,14 +1,11 @@
 ---
-const { titulo, descripcion } = Astro.props;
+const { titulo } = Astro.props;
 ---
 
-<div class="hero bg-sky-600 h-60 rounded-md my-4">
+<div class="hero bg-sky-600 h-24 rounded-md my-4">
   <div class="hero-content text-center">
     <div class="max-w-2xl">
       <h1 class="text-5xl font-bold text-white">{titulo}</h1>
-      <p class="py-6 lg:text-lg text-gray-200">
-        {descripcion}
-      </p>
     </div>
   </div>
 </div>
